--- a/_c8oProject/mobilePages/Projects.yaml
+++ b/_c8oProject/mobilePages/Projects.yaml
@@ -12,7 +12,7 @@ scriptContent:
         	    idField: ''qname'',
                 getChildren: (node:TreeNode) => {
                     return new Promise((resolve, reject) => {
-                        this.c8o.callJson(''.GetChildren'', ''qname'', node.data.qname).then((response, parameters) => {
+                        this.c8o.callJson(''.GetChildren'', ''qname'', node.data.qname, ''handleFolders'', true).then((response, parameters) => {
                             resolve(response[''array'']);
                             return null;
                         });
@@ -200,6 +200,18 @@ title: Title for Projects
           - xmlizable: 
             - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
             - MobileSmartSourceType: plain:{{ this.c8o.endpoint }}/.bin?__sequence=GetIcon&className={{ node.data.className }}
+      ↓Attr1 [mobile.components.UIAttribute-1591623660927]: 
+        attrName: width
+        attrValue: 
+          - xmlizable: 
+            - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+            - MobileSmartSourceType: plain:16px
+      ↓Attr2 [mobile.components.UIAttribute-1591623664174]: 
+        attrName: height
+        attrValue: 
+          - xmlizable: 
+            - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+            - MobileSmartSourceType: plain:16px
     ↓span [mobile.components.UIElement-1588602429371]: 
       tagName: span
       ↓Text [mobile.components.UIText-1588602449534]: 
